{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 0,
  "lineage": "",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw_id",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0d6d3adadfce841ac",
            "owner_id": "133450206866",
            "tags": {
              "Name": "eks-internetgateway-customer2-customer2_cluster1-0xc00002"
            },
            "vpc_id": "vpc-0e5c3b52163441819"
          },
          "dependencies": [
            "aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_id",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0cb00e974068f8575",
            "owner_id": "133450206866",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d6d3adadfce841ac",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0e5c3b52163441819"
          },
          "dependencies": [
            "aws_internet_gateway.gw_id",
            "aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068fea6b19a09143d",
            "route_table_id": "rtb-0cb00e974068f8575",
            "subnet_id": "subnet-015e31bdfe9bfdc87"
          },
          "dependencies": [
            "aws_internet_gateway.gw_id",
            "aws_route_table.route_id",
            "aws_subnet.subnet_id",
            "aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e96bd9b3fb1d0f6",
            "route_table_id": "rtb-0cb00e974068f8575",
            "subnet_id": "subnet-09eb821891fff600a"
          },
          "dependencies": [
            "aws_internet_gateway.gw_id",
            "aws_route_table.route_id",
            "aws_subnet.subnet_id",
            "aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster-secgrp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:133450206866:security-group/sg-05bf4fbe018199479",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05bf4fbe018199479",
            "ingress": [],
            "name": "eks-secgrp-customer2-customer2_cluster1-0xc00002",
            "name_prefix": null,
            "owner_id": "133450206866",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-secgrp-customer2-customer2_cluster1-0xc00002"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5c3b52163441819"
          },
          "dependencies": [
            "aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster-ingress-workstation-https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "223.226.117.66/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-1006829317",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05bf4fbe018199479",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.cluster-secgrp",
            "aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:133450206866:subnet/subnet-015e31bdfe9bfdc87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-015e31bdfe9bfdc87",
            "map_public_ip_on_launch": false,
            "owner_id": "133450206866",
            "tags": {
              "Name": "eks-subnet-customer2-customer2_cluster1-0xc00002",
              "kubernetes.io/cluster/customer2-customer2_cluster1-0xc00002": "shared"
            },
            "vpc_id": "vpc-0e5c3b52163441819"
          },
          "dependencies": [
            "aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:133450206866:subnet/subnet-09eb821891fff600a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-09eb821891fff600a",
            "map_public_ip_on_launch": false,
            "owner_id": "133450206866",
            "tags": {
              "Name": "eks-subnet-customer2-customer2_cluster1-0xc00002",
              "kubernetes.io/cluster/customer2-customer2_cluster1-0xc00002": "shared"
            },
            "vpc_id": "vpc-0e5c3b52163441819"
          },
          "dependencies": [
            "aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_id",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:133450206866:vpc/vpc-0e5c3b52163441819",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07840435e41fc9a51",
            "default_route_table_id": "rtb-0fc1cca98f2d9e8a8",
            "default_security_group_id": "sg-0bebac8fa4b1ca39e",
            "dhcp_options_id": "dopt-969102ee",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e5c3b52163441819",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fc1cca98f2d9e8a8",
            "owner_id": "133450206866",
            "tags": {
              "Name": "eks-vpc-customer2-customer2_cluster1-0xc00002",
              "kubernetes.io/cluster/customer2-customer2_cluster1-0xc00002": "shared"
            }
          }
        }
      ]
    }
  ]
}